Update index to something meaningful

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-"Hello World"
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Presidentelect</h1>
+        <h2>Just getting started with github pages</h2>
+        <p>I am just getting started with open source.
+        I am working through the 
+            <a href="railstutorial.org">Rails Tutorial</a></p>
+        and once I have completed it I will start putting some stuff up on github.
+    </body>
+</html>
